@@ -1,3 +1,7 @@
+2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b26
+
+	* Fix: register globals in setup/check_versions.php
+
 2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b25
 
 	* NEW: Added Donald Websters Microthumb Code. => album version and config bump.
